Return int instead of double for 0.